@@ -1,5 +1,14 @@
 2017-02-25  Bruno Haible  <bruno@clisp.org>
 
+	configure: Give some advice when readline or libncurses is not found.
+	* m4/readline.m4 (CL_READLINE): If not found, set ac_cv_have_readline
+	to 'no, per user request'
+	or 'no, consider installing GNU ncurses'
+	or 'no, consider installing GNU readline and its header files'
+	or 'no, consider installing GNU readline 4.1 or newer'.
+
+2017-02-25  Bruno Haible  <bruno@clisp.org>
+
 	configure: Improve failure message when --with-ffcall cannot be honored.
 	* m4/ffcall.m4 (CL_LIBFFCALL_DOWNLOAD_URL): New macro.
 	(CL_FFCALL): Upon failure, suggest to build a downloaded tarball. Fix
